5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1638_651.log
== TEST (2019-05-08 09:02:34) 
-- CODE:
a = float(input("insira a altura: "))
b = input("sexo M ou F: ").upper()


x = (72.7*a)-58
y = (62.1*a)-44.7

if(b==M):
	msg = y
else:
	msg = x

print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(b==M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:03:27) 
-- CODE:
a = float(input("insira a altura: "))
b = input("sexo M ou F: ").upper()


x = (72.7*a)-58
y = (62.1*a)-44.7

if(b== "M"):
	msg = y
else:
	msg = x

print(round(msg, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:04:17) 
-- CODE:
a = float(input("insira a altura: "))
b = input("sexo M ou F: ").upper()


x = (72.7*a)-58
y = (62.1*a)-44.7

if(b== "F"):
	msg = y
else:
	msg = x

print(round(msg, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 09:04:29) 
-- CODE:
a = float(input("insira a altura: "))
b = input("sexo M ou F: ").upper()


x = (72.7*a)-58
y = (62.1*a)-44.7

if(b== "F"):
	msg = y
else:
	msg = x

print(round(msg, 2))
-- EXECUTION TIME:
0.153983
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
